fixed: OC: dn in Draw widget question has no visible input field

--- a/widget/discrepancy-note/dn-widget.scss
+++ b/widget/discrepancy-note/dn-widget.scss
@@ -13,6 +13,11 @@ $padding: 30px;
             flex: 100% !important;
         }
 
+        // override Draw widget rule
+        input[type="text"][name="dn-comment"]{
+            display: block;
+        }
+
         &__query-btns {
             @include display-flex;
 
